@@ -59,6 +59,11 @@
         %span.badge.bg-success= @stats.biggest_daily_loss
         \/ 
         %span.badge.bg-danger= @stats.biggest_daily_gain
+      %p
+        Lowest / Highest BMI :
+        %span.badge.bg-success= @stats.min_bmi
+        \/
+        %span.badge.bg-danger= @stats.max_bmi
       
       %p
         Total Loss / Gain :
